--- a/ReseauSocial.Asp/Views/Message/Index.cshtml
+++ b/ReseauSocial.Asp/Views/Message/Index.cshtml
@@ -11,6 +11,7 @@
 
 <h1>Messages</h1>
 
+<hr/>
 <div>
     <div class="sticky-top bg-light row" id="HeaderPanel">
         <div class="col-4">
@@ -26,9 +27,6 @@
                 <div class=" list-group " role="tablist" id="listContact"  style="z-index:-1"></div>
                 <div class=" list-group  " role="tablist" id="listUsers" style="display:none ; z-index:-1"></div>
             </div>
-            
-
-            
 
             <div class="col-8 ">
                 <div>
@@ -41,9 +39,9 @@
                     </form>
                 </div>
                 <div>
+                    
                     <h4 id="messageTitle" class="m-2"></h4>
-                    <ul id="listMessage" class=" m-2 list-group">
-                    </ul>
+                    <ul id="listMessage" class=" m-2 list-group"> </ul>
                 </div>
             </div>
         </div>
