--- a/ReseauSocial.Asp/Views/User/ProfilUser.cshtml
+++ b/ReseauSocial.Asp/Views/User/ProfilUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ProfilUser";
 }
 
-<h1>Votre profile</h1>
+<h1>Votre profil</h1>
 
 <div>
    
@@ -50,7 +50,4 @@
         <a asp-controller="User" asp-action="ReactivateStatus"  asp-route-ChangedUserId="@Model.Id" class="btn btn-primary">Réactiver</a>       
     }
   
-</div>
-<div>
-    <a asp-controller="User" asp-action="Index">Retour</a>
 </div>
