--- a/ReseauSocial.Asp/Views/Article/Index.cshtml
+++ b/ReseauSocial.Asp/Views/Article/Index.cshtml
@@ -6,73 +6,71 @@
     ViewData["Title"] = "Accueil";
 }
 
-<h1> Liste des 10 derniers articles</h1>
+<h1> Liste des articles</h1>
 
 
 <table class="table">
     <thead>
+        
         <tr>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Content)
-            </th>
 
             <th>
                 @Html.DisplayNameFor(model => model.UserId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                @Html.DisplayNameFor(model => model.Title)
             </th>
+            @*<th>
+                @Html.DisplayNameFor(model => model.Content)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>*@
             <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+        <tr>
 
-                <td>
-                    @item.Title
-                </td>
-                <td>
-                    @item.Content
-                </td>
+            <td>
+                <a class="btn btn-primary" asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@item.UserId">@item.UserArticle.FirstName  @item.UserArticle.LastName</a>
+            </td>
+           
+          @*  <td>
+                @item.Content
+            </td>
 
-                <td>
-                    <a class="btn btn-primary" asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@item.UserId">@item.UserArticle.FirstName  @item.UserArticle.LastName</a>
-                </td>
-                <td>
-                    @item.Date
-                </td>
-                <td>
-                    <a asp-controller="Article" asp-action="GetArticleById" asp-route-id="@item.Id" class="btn btn-success">Details</a>
-                    @if (sessionManager.CurentUser is not null)
+            <td>
+                @item.Date
+            </td>*@
+            <td>
+                <a asp-controller="Article" asp-action="GetArticleById" asp-route-id="@item.Id" class="btn btn-success"> @item.Title</a>
+               @* @if (sessionManager.CurentUser is not null)
+                {
+                    @if (sessionManager.CurentUser.Id == item.UserId)
                     {
-                        @if (sessionManager.CurentUser.Id == item.UserId)
+                        <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
+                        <a asp-controller="Article" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Effacer</a>
+                    }
+                    else
+                    {
+                        @if (!articleService.IsSignalByUser(item.Id, sessionManager.CurentUser.Id))
                         {
-                            <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
-                            <a asp-controller="Article" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Effacer</a>
+                            <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
                         }
                         else
                         {
-                            @if (!articleService.IsSignalByUser(item.Id, sessionManager.CurentUser.Id))
-                            {
-                                <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
-                            }
-                            else
-                            {
-                                <a asp-controller="Article" asp-action="UnSignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Désignaler</a>
-                            }
-
+                            <a asp-controller="Article" asp-action="UnSignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Désignaler</a>
                         }
+
                     }
+                }*@
 
 
-                </td>
-            </tr>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
