--- a/ReseauSocial.Asp/Views/Home/Index.cshtml
+++ b/ReseauSocial.Asp/Views/Home/Index.cshtml
@@ -13,18 +13,18 @@
         <tr>
 
             <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Content)
-            </th>
-           
-            <th>
                 @Html.DisplayNameFor(model => model.UserId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                @Html.DisplayNameFor(model => model.Title)
             </th>
+            @*<th>
+                @Html.DisplayNameFor(model => model.Content)
+            </th>*@
+
+            @*<th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -32,35 +32,34 @@
         @foreach (var item in Model)
         {
         <tr>
-
-            <td>
-                @item.Title
-            </td>
-            <td>
-                @item.Content
-            </td>
-           
             <td>
                 @if (sessionManager.CurentUser is null)
                 {
-                    @item.UserArticle.FirstName @item.UserArticle.LastName
+                <p>@item.UserArticle.FirstName @item.UserArticle.LastName</p>
+                
                 }
                 else
                 {
-                    <a class="btn btn-primary" asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@item.UserId">@item.UserArticle.FirstName  @item.UserArticle.LastName</a>
+            <a class="btn btn-outline-primary" asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@item.UserId">
+                @item.UserArticle.FirstName @item.UserArticle.LastName
+            </a>
                 }
 
             </td>
-            <td>
+            
+          @*  <td>
+                @item.Content
+            </td>*@
+          @*  <td>
                 @item.Date
-            </td>
+            </td>*@
             <td>
 
                 @if (sessionManager.CurentUser is not null)
                 {
-                    <a asp-controller="Article" asp-action="GetArticleById" asp-route-id="@item.Id" class="btn btn-success">Details</a>
+                <a asp-controller="Article" asp-action="GetArticleById" asp-route-id="@item.Id" class="btn btn-outline-success">@item.Title</a>
 
-                    @if (sessionManager.CurentUser.Id == item.UserId)
+                   @* @if (sessionManager.CurentUser.Id == item.UserId)
                     {
                         <a asp-controller="Article" asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Modifier</a>
                         <a asp-controller="Article" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Effacer</a>
@@ -68,7 +67,11 @@
                     else
                     {
                         <a asp-controller="Article" asp-action="SignalArticle" asp-route-id="@item.Id" class="btn btn-danger">Signaler</a>
-                    }
+                    }*@
+                }
+                else
+                {
+                    @item.Title
                 }
 
 
