--- a/ReseauSocial.Asp/Views/Message/MessageTo.cshtml
+++ b/ReseauSocial.Asp/Views/Message/MessageTo.cshtml
@@ -5,23 +5,24 @@
 <div class="container">
     <div>
         <div>
+            <a asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@Model.Id" class="btn btn-success">Voir ses articles</a>
+            <hr/>
             <form>
                 <div class="form-group">
-                    <label for="message">Message</label>
+                    <label for="message">Message a  @Model.LastName @Model.FirstName</label>
                     <input name="message" type="text" class="form-control" id="message" placeholder="Votre message">
                 </div>
                 <button id="submitButton" type="submit" class="btn btn-primary">Envoyer</button>
             </form>
         </div>
-        <div class="m-2 row">
-            <h3 class="col-6">@Model.LastName @Model.FirstName</h3>
-            <a asp-controller="Article" asp-action="GetArticleByUserId" asp-route-id="@Model.Id" class="col-6 btn btn-success">Voir ses articles</a>
+        <hr/>
+        <div>
+            <h4 id="messageTitle" class="m-2"></h4>
+            <ul id="listMessage" class=" m-2 list-group"> </ul>
+          
         </div>
-        <div class="m-2">
-            <ul id="listMessage" class="list-group">
-            </ul>
-        </div>      
     </div>
+  
 </div>
 <script>
     var curentUserId = parseInt(@sessionManager.CurentUser.Id.ToString());
